--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "DEBUG=test-projet:server node ./bin/www",
-    "start": "node ./bin/www"
+    "prod": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
