--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "test-projet",
   "version": "0.0.0",
   "private": true,
+  "description":"Community about social apps",
+  "author":"M'bark Bouznir <mbark.bouznir@gmail.com>",
+  "repository": "https://github.com/zizmir/test-projet.git",
   "scripts": {
     "dev": "DEBUG=test-projet:server node ./bin/www",
-    "prod": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
