--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "test-projet",
   "version": "0.0.0",
   "private": true,
-  "description":"Community about social apps",
-  "author":"M'bark Bouznir <mbark.bouznir@gmail.com>",
+  "description": "Community about social apps",
+  "author": "M'bark Bouznir <mbark.bouznir@gmail.com>",
   "repository": "https://github.com/zizmir/test-projet.git",
   "scripts": {
     "dev": "DEBUG=test-projet:server node ./bin/www",
@@ -17,6 +17,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "serve-favicon": "~2.4.5"
   }
 }
