add sequelize module

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.17.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "sequelize": "^4.35.2",
     "serve-favicon": "~2.4.5"
   }
 }
